--- a/package.json
+++ b/package.json
@@ -62,14 +62,10 @@
     "typeface-montserrat": "1.1.13",
     "yup": "^1.2.0"
   },
-  "overrides": {
-    "babel-plugin-lodash": {
-      "@babel/types": "~7.20.0"
-    }
-  },
   "devDependencies": {
     "@types/isomorphic-fetch": "^0.0.36",
     "dumper.js": "^1.3.1",
-    "prettier": "2.8.1"
+    "prettier": "2.8.1",
+    "@babel/types": "7.20.7"
   }
 }
