--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.8.1",
+    "@babel/preset-typescript": "^7.22.15",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@hookform/error-message": "^2.0.1",
@@ -63,9 +64,9 @@
     "yup": "^1.2.0"
   },
   "devDependencies": {
+    "@babel/types": "7.20.7",
     "@types/isomorphic-fetch": "^0.0.36",
     "dumper.js": "^1.3.1",
-    "prettier": "2.8.1",
-    "@babel/types": "7.20.7"
+    "prettier": "2.8.1"
   }
 }
