--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
+    "react-hook-form": "^7.46.1",
     "react-icons": "^4.10.1",
     "swiper": "^10.2.0",
     "typeface-merriweather": "1.1.13",
