--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "gatsby-plugin-apollo": "^4.0.3",
     "gatsby-plugin-emotion": "^8.11.0",
     "gatsby-plugin-image": "^3.12.0",
+    "gatsby-plugin-layout": "^4.12.0",
     "gatsby-plugin-manifest": "^5.3.1",
     "gatsby-plugin-offline": "^6.3.1",
     "gatsby-plugin-react-helmet": "^6.3.0",
