--- a/package.json
+++ b/package.json
@@ -67,5 +67,8 @@
     "@types/isomorphic-fetch": "^0.0.36",
     "dumper.js": "^1.3.1",
     "prettier": "2.8.1"
+  },
+  "engines": {
+    "node": ">=18.0.0" 
   }
 }
